examples/tests/invalid/statements_if.w
let n = 0;
--n;

if !n {}
if !n || true {}
